   * Fixed mishandling of nested subnamespaces by the [clear_global_variable]
     WML action causing an assertion failure (bug #21093).
   * Fix bug #22443: Scenario Settings table has inaccurate Start Gold info in
     certain cases
   * Fix Grand Knight image being distorted in the sidebar
   * Fix bug #22251: Map labels not appearing in mp

Version 1.11.16:
 * Add-ons client:
   * The Update All button is now displayed on all Add-on Manager views instead
     of just the Upgradable filter view, and enabled only when there is at
     least one add-on that may be upgraded.
 * Add-ons server:
   * Add-on metadata pattern blacklisting implemented.
 * Campaigns
   * Descent into Darkness:
     * Fixed various issues with player and enemy gold and income in
       'Descent into Darkness'.
     * Fixed Darken Volk's ellipse in scenarios 'A Small Favor part 3' and
       'Alone at Last'.
     * Fixed Darken Volk being completely passive in 'Alone at Last'.
   * Legend of Wesmere
     * Disabled the non finished chapters 4 and 5 in the mp port.
     * Fix scenario 3 which was broken after a map change.
   * Northern Rebirth:
     * Fixed Sister Thera and Father Morvin respawning into the recall list if
       the other is on the north or west map edges.
   * Son of the Black Eye:
     * Minor balance tweaks to scenarios 15, 17 and 18.
     * Made allied leaders less likely to get themselves killed.
 * Editor:
   * Added an entry for the terrain description help to the context menu.
   * Default hotkey bindings for brushes (1-5)
   * Disabled the non working custom time schedule creator.
   * Disabled the swap palette button when the unit palette is active.
   * Disabled the item place tool which is not finished.
   * Disabled the non working toggle loyal feature.
   * Disabled the tod schedule and playlist menues in pure map mode.
   * Support for displaying the saved status of the selected area.
   * Fixed error messages about missing UI elements.
 * Graphics: