@@ -50,6 +50,8 @@ Version 1.11.16+dev:
      certain cases
    * Fix Grand Knight image being distorted in the sidebar
    * Fix bug #22251: Map labels not appearing in mp
+   * Fix bug wherein game saved in linger mode results in recall list being 
+     lost.
 
 Version 1.11.16:
  * Add-ons client:
